--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
-name = "app-name-kebab-case"
+name = "ttt"
 version = "0.1.0"
-description = "app_name_description"
+description = "Tic-Tac-Toe Telegram Bot"
 authors = [
     {name = "Alexander Smolin", email = "88573504+emptybutton@users.noreply.github.com"}
 ]
@@ -16,10 +16,10 @@ dependencies = [
     "sqlalchemy==2.0.41",
     "psycopg[binary]==3.2.9",
     "alembic==1.16.1",
-    "PyJWT==2.10.1",
-    "typenv==0.2.0",
-    "fastapi==0.115.12",
-    "uvicorn[standard]==0.34.3",
+    "aiogram==3.20.0.post0",
+    "redis==6.2.0",
+    "pydantic==2.10.6",
+    "pydantic-settings[yaml]==2.9.1",
 ]
 
 [dependency-groups]
@@ -30,22 +30,20 @@ dev = [
     "pytest-cov==6.1.1",
     "pytest-asyncio==1.0.0",
     "dirty-equals==0.9.0",
-    "httpx==0.28.1",
-    "httpx-ws==0.7.2",
 ]
 
 [project.urls]
-Repository = "https://github.com/emptybutton/app-name-kebab-case"
+Repository = "https://github.com/emptybutton/ttt"
 
 [build-system]
 requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src/app_name_snake_case"]
+packages = ["src/ttt"]
 
 [project.scripts]
-app-name-kebab-case-dev = "app_name_snake_case.main.fastapi.__main__:main"
+ttt-dev = "ttt.main.fastapi.__main__:main"
 
 [tool.uv]
 add-bounds = "exact"
@@ -73,6 +71,7 @@ lines-after-imports = 2
 [tool.ruff.lint]
 select = ["ALL"]
 ignore = [
+    "A005",
     "EXE002",
     "CPY001",
     "C401",
