--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,10 +15,11 @@ dependencies = [
     "sqlalchemy==2.0.41",
     "psycopg[binary]==3.2.9",
     "alembic==1.16.1",
-    "aiogram==3.20.0.post0",
+    "alembic-postgresql-enum==1.7.0",
     "redis==6.2.0",
     "pydantic==2.10.6",
     "pydantic-settings[yaml]==2.9.1",
+    "aiogram==3.20.0.post0",
 ]
 
 [dependency-groups]
