--- a/deploy/dev/docker-compose.yaml
+++ b/deploy/dev/docker-compose.yaml
@@ -19,6 +19,10 @@ services:
     environment:
       TTT_POSTGRES_URL: postgresql+psycopg://root:root@postgres/root
       TTT_REDIS_URL: redis://redis:6379/0
+      TTT_REDIS_POOL_SIZE: 16
+      TTT_GAME_WAITING_QUEUE_PULLING_TIMEOUT_MIN_MS: 200
+      TTT_GAME_WAITING_QUEUE_PULLING_TIMEOUT_SALT_MS: 800
+      TTT_MESSAGE_SENDING_RETRIES: 3
     secrets:
       - secrets
     command: ttt-dev
