--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,6 +7,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: add secrets
+        run: echo ${{ secrets.CONFIG }} > deploy/dev/ttt/secrets.yaml
+
       - name: ruff
         run: docker compose -f deploy/dev/docker-compose.yaml run ttt ruff check src tests
 
@@ -14,6 +18,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: add secrets
+        run: echo ${{ secrets.CONFIG }} > deploy/dev/ttt/secrets.yaml
+
       - name: mypy
         run: docker compose -f deploy/dev/docker-compose.yaml run ttt mypy src tests
 
@@ -21,6 +29,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+
+      - name: add secrets
+        run: echo ${{ secrets.CONFIG }} > deploy/dev/ttt/secrets.yaml
 
       - name: pytest
         run: docker compose -f deploy/dev/docker-compose.yaml run ttt pytest tests --cov --cov-report=xml
