--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,11 @@ strict = true
 no_namespace_packages = true
 allow_redefinition = true
 
+
+[[tool.mypy.overrides]]
+module = ["random_unicode_emoji.*"]
+follow_untyped_imports = true
+
 [tool.ruff]
 src = ["src"]
 preview = true
@@ -70,9 +75,6 @@ indent-width = 4
 
 [tool.ruff.lint.isort]
 lines-after-imports = 2
-
-[tool.ruff.lint.pylint]
-allow-dunder-method-names = ["__entity__"]
 
 [tool.ruff.lint]
 select = ["ALL"]
@@ -104,6 +106,7 @@ ignore = [
     "TC003",
     "TC006",
     "EM101",
+    "N807",
 ]
 
 [tool.ruff.lint.per-file-ignores]
