--- a/deploy/dev/docker-compose.yaml
+++ b/deploy/dev/docker-compose.yaml
@@ -18,6 +18,7 @@ services:
         condition: service_healthy
     environment:
       TTT_POSTGRES_URL: postgresql+psycopg://root:root@postgres/root
+      TTT_POSTGRES_ECHO: true
       TTT_REDIS_URL: redis://redis:6379/0
       TTT_REDIS_POOL_SIZE: 16
       TTT_GAME_WAITING_QUEUE_PULLING_TIMEOUT_MIN_MS: 100
