--- a/deploy/dev/docker-compose.yaml
+++ b/deploy/dev/docker-compose.yaml
@@ -18,12 +18,17 @@ services:
         condition: service_healthy
     environment:
       TTT_POSTGRES_URL: postgresql+psycopg://root:root@postgres/root
+      TTT_POSTGRES_POOL_SIZE: 8
+      TTT_POSTGRES_POOL_TIMEOUT_SECONDS: 30
+      TTT_POSTGRES_POOL_RECYCLE_SECONDS: 1800
+      TTT_POSTGRES_POOL_PRE_PING: false
       TTT_POSTGRES_ECHO: true
+
       TTT_REDIS_URL: redis://redis:6379/0
       TTT_REDIS_POOL_SIZE: 16
+
       TTT_GAME_WAITING_QUEUE_PULLING_TIMEOUT_MIN_MS: 100
       TTT_GAME_WAITING_QUEUE_PULLING_TIMEOUT_SALT_MS: 100
-      TTT_MESSAGE_SENDING_RETRIES: 3
     secrets:
       - secrets
     command: ttt-dev
@@ -50,13 +55,14 @@ services:
     container_name: ttt-redis
     volumes:
       - redis-data:/data
-      - ./redis:/mnt
+      - ./redis:/mnt/dev
+      - ../common/redis:/mnt/common
     healthcheck:
-      test: bash /mnt/is-server-ok.sh
+      test: echo PING | redis-cli | grep -qF PONG
       start_period: 2m
       start_interval: 0.5s
       interval: 3s
-    command: bash /mnt/start-server.sh
+    command: redis-server /mnt/dev/redis.conf
 
 volumes:
   backend-data: null
