--- a/deploy/prod/postgres_master/postgres.conf
+++ b/deploy/prod/postgres_master/postgres.conf
@@ -1,5 +1,7 @@
 include '/mnt/common-postgres.conf'
 
 # REPLICATION
-synchronous_standby_names = 'replica1'
-synchronous_commit = remote_apply
+hot_standby = on
+
+# PATHS
+hba_file = '/mnt/pg_hda.conf'
