--- a/deploy/prod/ttt/alembic.ini
+++ b/deploy/prod/ttt/alembic.ini
@@ -1,6 +1,5 @@
 [alembic]
-script_location =
-    /usr/local/lib/python3.13/site-packages/ttt/infrastructure/alembic
+script_location = infrastructure/alembic
 
 prepend_sys_path = sys
 version_path_separator = os
