--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
     "pydantic==2.10.6",
     "pydantic-settings[yaml]==2.9.1",
     "aiogram==3.20.0.post0",
+    "nats-py[nkeys]==2.10.0",
 ]
 
 [dependency-groups]
