--- a/deploy/dev/docker-compose.yaml
+++ b/deploy/dev/docker-compose.yaml
@@ -77,7 +77,7 @@ services:
       - nats-data:/data
     ports:
       - 4222:4222
-    command: nats-server -js
+    command: nats-server -js -m 8222
     healthcheck:
       test: wget http://nats:8222/healthz -q -O /dev/null
       start_period: 2m
@@ -92,7 +92,7 @@ services:
         condition: service_healthy
     volumes:
       - ./nats:/mnt
-    entrypoint: null
+    entrypoint: [""]
     command: ["bash", "/mnt/add_streams.sh"]
 
 volumes:
