--- a/deploy/prod/docker-compose.yaml
+++ b/deploy/prod/docker-compose.yaml
@@ -33,6 +33,8 @@ services:
 
       TTT_NATS_URL: nats://${NATS_TOKEN}@nats:4222
 
+      TTT_GEMINI_URL: ${GEMINI_URL}
+
       TTT_GAME_WAITING_QUEUE_PULLING_TIMEOUT_MIN_MS: 100
       TTT_GAME_WAITING_QUEUE_PULLING_TIMEOUT_SALT_MS: 200
     secrets:
