--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -16,6 +16,7 @@ jobs:
         run: |
           echo "bot_token: ${{ secrets.BOT_TOKEN }}" > deploy/prod/ttt/secrets.yaml
           echo "payments_token: ${{ secrets.PAYMENTS_TOKEN }}" >> deploy/prod/ttt/secrets.yaml
+          echo "gemini_api_key: ${{ secrets.GEMINI_API_KEY }}" >> deploy/prod/ttt/secrets.yaml
 
       - name: deploy
         run: bash ./deploy/prod/deploy.sh
@@ -26,3 +27,5 @@ jobs:
             POSTGRES_REPLICA_PASSWORD: ${{ secrets.POSTGRES_REPLICA_PASSWORD }}
 
             NATS_TOKEN: ${{ secrets.NATS_TOKEN }}
+
+            GEMINI_URL: ${{ secrets.GEMINI_URL }}
