--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ dependencies = [
     "pydantic-settings[yaml]==2.9.1",
     "aiogram==3.20.0.post0",
     "nats-py[nkeys]==2.10.0",
+    "openai==1.97.0",
 ]
 
 [dependency-groups]
