--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ dependencies = [
     "aiogram==3.20.0.post0",
     "nats-py[nkeys]==2.10.0",
     "openai==1.97.0",
+    "structlog==25.4.0",
 ]
 
 [dependency-groups]
