--- a/deploy/dev/docker-compose.yaml
+++ b/deploy/dev/docker-compose.yaml
@@ -26,7 +26,7 @@ services:
       TTT_POSTGRES_POOL_TIMEOUT_SECONDS: 30
       TTT_POSTGRES_POOL_RECYCLE_SECONDS: 1800
       TTT_POSTGRES_POOL_PRE_PING: false
-      TTT_POSTGRES_ECHO: true
+      TTT_POSTGRES_ECHO: false
 
       TTT_REDIS_URL: redis://redis:6379/0
       TTT_REDIS_POOL_SIZE: 16
