--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -30,3 +30,5 @@ jobs:
             NATS_TOKEN: ${{ secrets.NATS_TOKEN }}
 
             GEMINI_URL: ${{ secrets.GEMINI_URL }}
+
+            GRAFANA_ADMIN_PASSWORD: ${{ secrets.GRAFANA_ADMIN_PASSWORD }}
