--- a/deploy/prod/docker-compose.yaml
+++ b/deploy/prod/docker-compose.yaml
@@ -2,6 +2,7 @@ name: ttt
 
 services:
   ttt:
+    image: ttt:prod
     build:
       context: ../../
       dockerfile: deploy/prod/ttt/Dockerfile
@@ -86,7 +87,7 @@ services:
     mem_limit: 30mb
     healthcheck:
       test: pg_isready -d ttt -U ttt
-      start_period: 1m
+      start_period: 2m
       start_interval: 1s
       interval: 5s
 
@@ -116,7 +117,7 @@ services:
     mem_limit: 30mb
     healthcheck:
       test: pg_isready -d ttt -U ttt
-      start_period: 1m
+      start_period: 2m
       start_interval: 1s
       interval: 5s
 
@@ -154,6 +155,63 @@ services:
     entrypoint: [""]
     command: ["bash", "/mnt/add_streams.sh"]
 
+  alloy:
+    image: grafana/alloy:v1.10.0
+    container_name: ttt-alloy
+    # ports:
+    #   - 12345:12345
+    #   - 4317:4317
+    #   - 4318:4318
+    volumes:
+      - ./alloy/config.alloy:/etc/alloy/config.alloy
+      - /var/run/docker.sock:/var/run/docker.sock
+    networks:
+      - loki
+    command: run --server.http.listen-addr=0.0.0.0:12345 --storage.path=/var/lib/alloy/data /etc/alloy/config.alloy
+    depends_on:
+      - loki
+
+  loki:
+    image: grafana/loki:3.4.5
+    container_name: ttt-loki
+    environment:
+      TZ: ${SYSTEM_TIMEZONE:-Europe/Moscow}
+    # ports:
+    #   - 3100:3100
+    volumes:
+      - loki-data:/loki
+      - ./loki/loki-config.yaml:/etc/loki/local-config.yaml
+    networks:
+      - loki
+    command: -config.file=/etc/loki/local-config.yaml
+
+  grafana:
+    image: grafana/grafana:12.0.2-ubuntu
+    container_name: ttt-grafana
+    environment:
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
+      - GF_FEATURE_TOGGLES_ENABLE=grafanaManagedRecordingRules
+
+      - GF_AUTH_ANONYMOUS_ENABLED=false
+      - GF_AUTH_BASIC_ENABLED=true
+
+      - GF_SECURITY_FORCE_PASSWORD_CHANGE=true
+      - GF_SECURITY_DISABLE_INITIAL_ADMIN_CREATION=false
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_ADMIN_PASSWORD}
+      - GF_SECURITY_MIN_PASSWORD_LENGTH=4
+
+      - GF_USERS_ALLOW_SIGN_UP=false
+
+      - TZ=${SYSTEM_TIMEZONE:-Europe/Moscow}
+    ports:
+      - 3000:3000
+    volumes:
+      - grafana-data:/var/lib/grafana
+      - ./grafana/provisioning/datasources:/etc/grafana/provisioning/datasources
+    networks:
+      - loki
+
 volumes:
   postgres-replica1-data:
     name: "ttt-prod-postgres-replica1-data"
@@ -163,11 +221,16 @@ volumes:
     name: "ttt-prod-redis-data"
   nats-data:
     name: "ttt-prod-nats-data"
+  loki-data:
+    name: "ttt-prod-loki-data"
+  grafana-data:
+    name: "ttt-prod-grafana-data"
 
 networks:
   postgres: null
   redis: null
   nats: null
+  loki: null
 
 secrets:
   secrets:
